# pipepp

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  README.kr.md
core/: CMakeLists.txt
core/include/pipepp/: execution_context.hpp  executor_options.hpp  lock_free_queue.hxx  log.hpp  options.hpp  pipe.hpp  pipe_container.hpp  pipe_proxy.hpp  pipeline.hpp  pipeline_factory.hpp  pipepp-forward.h  pipepp.h  safe_queue.hxx  stage.hpp  string_utility.hxx  templates.hxx  thread_pool.hxx
core/include/pipepp/impl/: pipeline.hxx
core/include/pipepp/internal/: execution_context.hpp
core/include/src/: log.cpp  pipe.cpp
core/src/: execution_context.cpp  executor_options.cpp  options.cpp  pipe.cpp  pipeline.cpp
gui/: CMakeLists.txt
gui/include/pipepp/gui/: basic_utility.hpp  debug_data_panel.hpp  option_panel.hpp  pipe_detail_panel.hpp  pipe_view.hpp  pipeline_board.hpp
gui/src/: basic_utility.cpp  debug_data_panel.cpp  option_panel.cpp  pipe_detail_panel.cpp  pipe_view.cpp  pipeline_board.cpp
tests/: CMakeLists.txt
tests/automated/: test-pipe.cpp  test-pipeline.cpp
tests/gui/: CMakeLists.txt  entry.cpp  sample_pipeline.cpp  sample_pipeline.hpp
tests/src/: test-gui-base.cpp  test-pipe.cpp  test-pipeline.cpp  test-queue.cpp  test-thread_pool.cpp
third/json/: CMakeLists.txt
third/json/include/nlohmann/: json.hpp
